feat: plot va vs iter